--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: hmsidwR
-Title: Collection of data and function used in the Health Metrics and the Spread of Infectious Diseases with R
+Title: Collection of data and functions used in the Health Metrics and the Spread of Infectious Diseases with R
     book
 Version: 0.0.0.9000
 Authors@R: 
@@ -14,13 +14,16 @@ License: MIT + file LICENSE
 URL: https://github.com/Fgazzelloni/hmsidwR, https://fgazzelloni.github.io/hmsidwR/
 BugReports: https://github.com/Fgazzelloni/hmsidwR/issues
 Depends: 
-    R (>= 2.10)
+    R (>= 2.10),
+    tidyverse
 Imports: 
+    dplyr,
     ggplot2,
-    purrr
+    plotly,
+    purrr,
+    sf
 Suggests: 
     devtools,
-    dplyr,
     httr,
     janitor,
     knitr,
@@ -30,9 +33,7 @@ Suggests:
     readxl,
     rmarkdown,
     sessioninfo,
-    showtext,
     stats,
-    sysfonts,
     testthat (>= 3.0.0),
     tidyr
 Config/testthat/edition: 3
