--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,8 +14,7 @@ License: MIT + file LICENSE
 URL: https://github.com/Fgazzelloni/hmsidwR, https://fgazzelloni.github.io/hmsidwR/
 BugReports: https://github.com/Fgazzelloni/hmsidwR/issues
 Depends: 
-    R (>= 2.10),
-    tidyverse
+    R (>= 2.10)
 Imports: 
     ggplot2,
     ggthemes,
@@ -38,7 +37,8 @@ Suggests:
     sf,
     stats,
     testthat (>= 3.0.0),
-    tidyr
+    tidyr,
+    tidyverse
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
