--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,10 @@
 Package: hmsidwR
-Title: Collection of data and functions used in the Health Metrics and the Spread of Infectious Diseases with R
-    book
+Title: Health Metrics and the Spread of Infectious Diseases with R
 Version: 0.0.0.9000
 Authors@R: 
     person("Federica", "Gazzelloni", , "fede.gazzelloni@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-4285-611X"))
-Description: This package provides data sets and author's functions used
-    in the Health Metrics and the Spread of Infectious Diseases with R
-    book from CRC Press. The book provides the tools for calculating the DALYs (YLLs+YLDs), and other important health metrics.
-    It also shows the R code for modeling infectious diseases with machine learning. Finally,
-    allows the user to understand how to visualize the results and making maps.
+Description: This package contains a collection of data and functions used in the Health Metrics and the Spread of Infectious Diseases with R book. The book provides the tools for calculating the DALYs (YLLs+YLDs), and other important health metrics. It also shows the R code for modeling infectious diseases with machine learning. Finally, allows the user to understand how to visualize the results and making maps.
 License: MIT + file LICENSE
 URL: https://github.com/Fgazzelloni/hmsidwR, https://fgazzelloni.github.io/hmsidwR/
 BugReports: https://github.com/Fgazzelloni/hmsidwR/issues
