updating CRAN reviews

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,9 @@ export(getunz)
 export(kbfit)
 export(string_search)
 export(theme_hmsid)
+import(ggplot2)
+import(showtext)
+import(sysfonts)
 importFrom(gstat,fit.variogram)
 importFrom(gstat,gstat)
 importFrom(gstat,variogram)
